test/conformance/chainsaw/reports-exclude-result/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myns
