test/conformance/chainsaw/reports-exclude-result/policy.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: require-multiple-replicas
  namespace: myns
spec:
  background: true
  rules:
    - name: require-multiple-replicas
      match:
        any:
          - resources:
              kinds:
                - Deployment
              operations:
                - CREATE
      validate:
        pattern:
          spec:
            replicas: ">1"
  validationFailureAction: Enforce
